# Sprout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sprout.slnx  library.h
docs/: docfx.json  index.md
include/Sprout/: Sprout.h  Window.h
include/Sprout/Graphics/: Color.h  GraphicsDevice.h  Shader.h
include/Sprout/Math/: Types.h
include/Sprout/ShaderUtils/: ShaderCompiler.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/libvma/: CMakeLists.txt  buildvma.sh
src/: Directory.Build.props  Window.cpp
src/Graphics/: GraphicsDevice.cpp
src/Graphics/GL/: GLGraphicsDevice.cpp  GLGraphicsDevice.h
src/Graphics/SDL/: SDLGraphicsDevice.cpp  SDLGraphicsDevice.h  SDLShader.cpp  SDLShader.h  SDLUtils.h
src/ShaderUtils/: ShaderCompiler.cpp
src/Sprout/: App.cs  AppInfo.cs  Class1.cs  EventManager.cs  Events.cs  Input.cs  InputManager.cs  Key.cs  MessageBox.cs  MouseButton.cs  SdlUtils.cs  Sprout.csproj  Window.cs  WindowInfo.cs
src/Sprout.Audio/: AudioDevice.cs  Class1.cs  Sound.cs  SoundInstance.cs  Sprout.Audio.csproj  StreamSound.cs  StreamUtils.cs
src/Sprout.Content/: PathUtils.cs
src/Sprout.EntitySystem/: Scene.cs  SceneManager.cs  Sprout.EntitySystem.csproj
src/Sprout.Graphics/: AttributeType.cs  Backend.cs  BlendFactor.cs  BlendMode.cs  BlendOperation.cs  Class1.cs  Color.cs  Filter.cs  Font.cs  GraphicsDevice.cs  GraphicsExtensions.cs  PixelFormat.cs  PreCompiledShader.cs  Renderable.cs  RenderableInfo.cs  Sampler.cs  Semantic.cs  Shader.cs  ShaderAttachment.cs  ShaderInfo.cs  ShaderStage.cs  SpriteFlip.cs  SpriteRenderer.cs  Sprout.Graphics.csproj  Texture.cs  TextureAddress.cs  TextureUsage.cs  Uniform.cs  UniformType.cs  VertexAttribute.cs  Viewport.cs  libVulkanMemoryAllocator.dylib
src/Sprout.Graphics.ShaderUtils/: Compiler.cs  DxcString.cs  DxcStringArray.cs  Sprout.Graphics.ShaderUtils.csproj
src/Sprout.Graphics/D3D11/: D3D11GraphicsDevice.cs  D3D11Renderable.cs  D3D11Shader.cs  D3D11Texture.cs  D3D11Utils.cs
src/Sprout.Graphics/OpenGL/: GLGraphicsDevice.cs  GLRenderable.cs  GLShader.cs  GLTexture.cs  GLUtils.cs
src/Sprout.Graphics/SDLGPU/: SDLGraphicsDevice.cs  SDLUtils.cs
src/Sprout.Graphics/Shaders/: SpriteRenderer.hlsl  SpriteRenderer.pcsh
src/Sprout.Graphics/Utils/: DxcString.cs  DxcStringArray.cs  PreCompiledShader.cs  ShaderUtils.cs
src/Sprout.Graphics/Vulkan/: Queues.cs  VkBuffer.cs  VkGraphicsDevice.cs  VkHelper.cs  VkImage.cs  VkRenderable.cs  VkShader.cs  VkString.cs  VkStringArray.cs  VkTexture.cs  VulkanGraphicsDevice.cs  VulkanUtils.cs
src/Sprout.Graphics/Vulkan/VMA/: Allocation.cs  AllocationCreateFlags.cs  AllocationCreateInfo.cs  Allocator.cs  AllocatorCreateInfo.cs  NativeAnnotationAttribute.cs  NativeTypeNameAttribute.cs  Vma.cs  VmaAllocationInfo.cs  VmaAllocationInfo2.cs  VmaAllocatorCreateFlagBits.cs  VmaAllocatorInfo.cs  VmaBudget.cs  VmaDefragmentationContext_T.cs  VmaDefragmentationFlagBits.cs  VmaDefragmentationInfo.cs  VmaDefragmentationMove.cs  VmaDefragmentationMoveOperation.cs  VmaDefragmentationPassMoveInfo.cs  VmaDefragmentationStats.cs  VmaDetailedStatistics.cs  VmaDeviceMemoryCallbacks.cs  VmaMemoryUsage.cs  VmaPoolCreateFlagBits.cs  VmaPoolCreateInfo.cs  VmaPool_T.cs  VmaStatistics.cs  VmaTotalStatistics.cs  VmaVirtualAllocationCreateFlagBits.cs  VmaVirtualAllocationCreateInfo.cs  VmaVirtualAllocationInfo.cs  VmaVirtualAllocation_T.cs  (+4 more)
tests/: BasicWindow.cpp  CMakeLists.txt  ClearColor.cpp
tests/Graphics/: ClearColor.cpp  SimpleShaderTest.cpp
tests/Graphics/Base/: TestBase.cpp  TestBase.h
tests/Graphics/Sprout.Graphics.Tests.Base/: Sprout.Graphics.Tests.Base.csproj  TestBase.cs
tests/Graphics/Sprout.Graphics.Tests.BuffersTest/: BuffersTest.cs  Program.cs  Shader.hlsl
tests/Graphics/Sprout.Graphics.Tests.ClearColor/: ClearColorTest.cs  Program.cs
tests/Graphics/Sprout.Graphics.Tests.PCSH/: PCSHTest.cs  Program.cs  Shader.hlsl  Shader.pcsh  Sprout.Graphics.Tests.PCSH.csproj
tests/Graphics/Sprout.Graphics.Tests.RenderTexture/: Program.cs  RenderTextureTest.cs
tests/Graphics/Sprout.Graphics.Tests.SimpleShader/: Program.cs  Shader.hlsl  SimpleShaderTest.cs  Sprout.Graphics.Tests.SimpleShader.csproj
tests/Graphics/Sprout.Graphics.Tests.SpritePerformance/: Program.cs  SpritePerformanceTest.cs  Sprout.Graphics.Tests.SpritePerformance.csproj
tests/Graphics/Sprout.Graphics.Tests.SpriteRenderer/: Program.cs  SpriteRendererTest.cs  Sprout.Graphics.Tests.SpriteRenderer.csproj
tests/Graphics/Sprout.Graphics.Tests.Text/: Program.cs  Sprout.Graphics.Tests.Text.csproj  TextTest.cs
tests/Graphics/Sprout.Graphics.Tests.Texture/: Program.cs  Shader.hlsl  Sprout.Graphics.Tests.Texture.csproj  TextureTest.cs
tests/Sprout.Graphics.Tests/: BasicTests.cs  Sprout.Graphics.Tests.csproj  TestBase.cs
tests/Sprout.Tests.TestGame/: Game.cs  Program.cs  Sprout.Tests.TestGame.csproj
tests/Sprout.Tests.WindowAndEvents/: Program.cs  Sprout.Tests.WindowAndEvents.csproj
tools/CompileShaders/: CompileShaders.csproj  Program.cs
