function (add_tests dirname)
    message(STATUS "Looking for tests in ${dirname}")
    file(GLOB TEST_SRC ${dirname}/*.cpp)
    # Additional source dirs: any extra arguments will be added to the executable.
    set(additional_src)
    foreach (src in ${ARGN})
        file(GLOB additional_files ${src}/*.h ${src}/*.cpp)
        list(APPEND additional_src ${additional_files})
    endforeach ()
    foreach (file IN LISTS TEST_SRC)
        get_filename_component(filename ${file} NAME_WE)
        set(testname "Test_${dirname}_${filename}")
        message(STATUS "${file} -> ${testname}")
        add_executable(${testname} ${file} ${additional_src})
        target_link_libraries(${testname} Sprout)
    endforeach ()
endfunction()

add_tests(Graphics Graphics/Base)